[web] Fix "See more..." button alignment in `ChatThreadListSeeMoreSidebars` component
Summary:
Address issue where the "See more..." button wasn't aligned with the rest of the items in the `ChatThreadList`.

More context: https://linear.app/comm/issue/ENG-920/see-more-threads-button-doesnt-look-right-on-web

Test Plan: Ensured that thread list looked correct visually. Tested in Chrome/Safari at different breakpoints.

Reviewers: atul

Subscribers: ashoat, palys-swm, Adrian, karol-bisztyga, benschac

Differential Revision: https://phabricator.ashoat.com/D3541

--- a/web/chat/chat-thread-list.css
+++ b/web/chat/chat-thread-list.css
@@ -150,6 +150,10 @@ div.sidebarTitle {
 div.sidebarTitle.unread {
   color: var(--fg);
 }
+div.seeMoreButton {
+  padding-left: 58px;
+  font-size: 12px;
+}
 div.sidebarLastActivity {
   white-space: nowrap;
   font-size: var(--xxs-font-10);
